feat(backend): Track A Phase 2a — real Ollama chat + document pipeline
Replaces the Phase 1 stub with a real LLM-backed answer generator that
uses uploaded document content as inline context. No vector DB — this is
the user-requested "LLM knowledge base" approach (long-context RAG).

Pipeline:
1. Upload: POST /projects/{id}/documents
   MultipartFile -> DocumentStorageService (local FS at
   ${GRAPHIFY_STORAGE_ROOT:./storage}/documents/{projectId}/{uuid}-name)
   -> DocumentTextExtractor (Apache Tika, 1MB cap, paragraph splitter,
   ~2KB chunks) -> Document persisted UPLOADED -> PARSING -> INDEXING ->
   READY -> DocumentChunks persisted with chunkIndex, tokenCount, content
2. Answer: POST /chat/sessions/{id}/messages and POST /chat/answer
   ChatPromptBuilder assembles scope-accessible READY documents inside a
   character budget (graphify.chat.max-context-chars) into a Korean
   system prompt that instructs the model to cite titles as
   "Sources: <title1>, <title2>". OllamaClient (java.net.http.HttpClient)
   POSTs to ${OLLAMA_BASE_URL:http://172.30.0.22:8080}/api/chat with
   ${OLLAMA_MODEL:glm-4.7-flash}, stream=false. CitationParser extracts
   Sources/출처 suffix, strips it, matches entries to included documents
   by title contains, dedup ids. AnswerGeneratorService saves the
   assistant ChatMessage + N AnswerCitations for session-based messages;
   generateSingleShot path used by /chat/answer returns a transient
   answer without persistence.
3. Graceful degradation: LLM failure returns a user-facing apology.

Added:
- config/properties/GraphifyOllamaProperties, GraphifyStorageProperties,
  GraphifyChatProperties (@ConfigurationProperties)
- service/llm/OllamaClient
- service/document/DocumentStorageService, DocumentTextExtractor,
  DocumentProcessingService
- service/chat/ChatPromptBuilder, CitationParser, AnswerGeneratorService
- docs/plans/2026-04-20-ollama-chat-answer-generation.md

Modified:
- build.gradle: Apache Tika 2.9.2 (core + standard parsers)
- 